# SFML-Base

./: .gitignore  CMakeLists.txt
assets/: test.fs
src/: CMakeLists.txt  DEFINATIONS.hpp  animatedsprite.cpp  animatedsprite.hpp  animation.cpp  animation.hpp  assetmanager.cpp  assetmanager.hpp  examplestate.cpp  examplestate.hpp  game.cpp  game.hpp  main.cpp  state.hpp  statemanager.cpp  statemanager.hpp
